<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit_action_local"
        android:title="@string/menu_action_local" />
    <item
        android:id="@+id/action_clear_action_local"
        android:title="@string/menu_action_local_clear" />
    <item
        android:id="@+id/action_set_place_local"
        android:title="@string/menu_place_local" />
    <item
        android:id="@+id/action_clear_place_local"
        android:title="@string/menu_place_local_clear" />
    <item
        android:id="@+id/action_mute_local_on"
        android:title="@string/menu_mute_local_on" />
    <item
        android:id="@+id/action_mute_local_off"
        android:title="@string/menu_mute_local_off" />
</menu>