<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvActionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actions_title"
            android:textStyle="bold"
            android:paddingBottom="6dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_alarm" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swDnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_dnd" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swNotifyMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_notify_month" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swNotifyWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_notify_week" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swNotifyDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_notify_day" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swNotifyOnDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_notify_on_day" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swNotify1h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_notify_1h" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swNotify10m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_notify_10m" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swNotify1m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_notify_1m" />

    </LinearLayout>
</ScrollView>