<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeinfo_weekly_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dow_mon" />

        <CheckBox
            android:id="@+id/cbTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dow_tue" />

        <CheckBox
            android:id="@+id/cbWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dow_wed" />

        <CheckBox
            android:id="@+id/cbThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dow_thu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dow_fri" />

        <CheckBox
            android:id="@+id/cbSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dow_sat" />

        <CheckBox
            android:id="@+id/cbSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dow_sun" />
    </LinearLayout>
</LinearLayout>