<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="52dp" android:padding="12dp">
    <TextView android:id="@+id/tvTime" android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/schedule_time_placeholder" android:textAppearance="?attr/textAppearanceBodyMedium" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView android:id="@+id/tvTitle" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/schedule_task_name_placeholder" android:textAppearance="?attr/textAppearanceBodyLarge" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@id/tvTime" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView android:id="@+id/tvSub" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/schedule_task_meta_placeholder" android:textAppearance="?attr/textAppearanceBodySmall" app:layout_constraintTop_toBottomOf="@id/tvTitle" app:layout_constraintStart_toStartOf="@id/tvTitle" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>